# opencab

./: .rustfmt.toml  Cargo.toml  README.md  dockerfile
.github/workflows/: ci.yml  claude-code-review.yml  deploy-production.yml
config/: development.yaml  test.yaml
docs/: migration-scaleway.md
frontend/: index.html  package.json
frontend/src/: index.css  main.tsx  routeTree.gen.ts  vite-env.d.ts
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_users.rs  m20250820_151249_patients.rs  m20250820_152922_create_join_table_users_and_patients.rs  m20250902_193546_add_hashed_ssn_to_patients.rs  m20250907_000001_split_patient_name.rs  m20250912_195210_add_unique_constraint_user_business_info.rs  m20250913_125707_add_office_to_patient.rs  m20250921_200853_add_phone_number_to_user.rs  m20250922_074830_create_practitioner_office_table.rs  m20251018_123530_add_email_to_patient.rs  m20251025_210751_remove_unique_constraints_from_patient_ssn.rs  m20251122_092542_add_user_id_to_patients.rs  m20251123_103746_create_medicale_appointments_table.rs  m20251129_135113_add_default_timestamps_to_medical_appointments.rs  m20251201_220702_drop_patient_user_table.rs  m20251208_221001_add_access_key_to_user.rs  m20260107_075701_add_profession_to_user_information.rs  m20260113_223518_add_pricing_to_medical_appointments.rs  m20260304_201910_add_payment_method_to_medical_appointment.rs  m20260308_000001_fix_schema_drift.rs  m20260317_220127_make_patient_email_nullable.rs  m20260412_074522_make_patient_ssn_nullable.rs  m20260508_155536_create_companies_table.rs  m20260526_185055_create_company_interventions_table.rs  m20260625_145842_add_banking_information_to_business_info.rs  m20260701_123812_add_unique_constraint_to_user_pid.rs
src/: app_state.rs  config.rs  db.rs  lib.rs  main.rs  router.rs  worker_transmitter.rs
src/auth/: context.rs  jwt.rs  mod.rs  password.rs  resource.rs  statement.rs
src/controllers/: auth.rs  company_interventions.rs  medical_appointment.rs  mod.rs  patient.rs  practitioner_companies.rs  practitioner_office.rs  user.rs
src/middleware/: auth.rs  context.rs  mod.rs
src/models/: company_interventions.rs  medical_appointments.rs  mod.rs  patients.rs  practitioner_companies.rs  practitioner_offices.rs  user_business_informations.rs  user_practitioner_offices.rs  users.rs
src/services/: appointments.rs  crypto.rs  invoice.rs  patients.rs  practitioner_office.rs  storage.rs  user.rs
src/validators/: address.rs
src/views/: medical_appointments.rs  patient.rs  practitioner_office.rs  user.rs
src/workers/: appointments_export.rs  invoice_generator.rs  (+1 more)
tests/: bdd.rs  integration.rs
(+102 files in other folders)
