[package]
name = "opencab"
version = "1.4.1"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
tokio = { version = "1.45", default-features = false, features = [
  "rt-multi-thread",
  "signal",
  "macros",
  "sync",
] }
async-trait = { version = "0.1" }
axum = { version = "0.8", features = ["macros", "multipart"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors", "trace"] }
config = "0.14"
jsonwebtoken = "9.3"
migration = { path = "migration" }
sea-orm = { version = "1.1", features = [
  "sqlx-sqlite",
  "sqlx-postgres",
  "runtime-tokio-rustls",
  "macros",
] }
chrono = { version = "0.4" }
validator = { version = "0.20", features = ["derive"] }
uuid = { version = "1.6", features = ["v4"] }
include_dir = { version = "0.7" }
aes-gcm = "0.10.3"
base64 = "0.22.1"
argon2 = "0.5"
regex = "1.11"
once_cell = "1.20"
lettre = { version = "0.11", features = [
    "tokio1-native-tls",  # Async support with native TLS
    "smtp-transport",      # SMTP protocol support
    "builder",             # Email builder API
    "hostname"             # Hostname resolution
] }
oxidize-pdf = "1.6"
# HTTP client for Supabase storage
reqwest = { version = "0.12", features = ["json", "stream"] }
# Image processing for signature embedding
image = "0.25"
dotenvy = "0.15"
# Random number generation for access keys
rand = "0.8"
rust_xlsxwriter = "0.93.0"

[dev-dependencies]
serial_test = { version = "3.1.1" }
rstest = { version = "0.25" }
insta = { version = "1.34", features = ["redactions", "yaml", "filters"] }
sea-orm = { version = "1.1", features = ["mock"] }


[[bin]]
name = "migrate"
path = "src/bin/migrate.rs"
test = false

[[bin]]
name = "send_access_token"
path = "src/bin/send_access_token.rs"
test = false
